objects/Carrier_Speed_c__x.object
<CustomObject>
    <externalDataSource>HDMP_QA</externalDataSource>
    <externalName>Carrier_Speed__c</externalName>
    <fields>
        <fullName>AK_Carrier_Speed_c__c</fullName>
        <externalDeveloperName>AK_Carrier_Speed__c</externalDeveloperName>
        <label>AK Carrier Speed</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Speed_Name_c__c</fullName>
        <externalDeveloperName>Carrier_Speed_Name__c</externalDeveloperName>
        <label>Carrier Speed Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_c__c</fullName>
        <externalDeveloperName>Carrier__c</externalDeveloperName>
        <label>Carrier</label>
        <length>18</length>
        <referenceTo>Carrier_c__x</referenceTo>
        <relationshipName>Carrier_Speeds</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Honda_Shipping_Speed_c__c</fullName>
        <externalDeveloperName>Honda_Shipping_Speed__c</externalDeveloperName>
        <label>Honda Shipping Speed</label>
        <length>18</length>
        <referenceTo>Honda_Shipping_Speed_c__x</referenceTo>
        <relationshipName>Carrier_Speeds</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Carrier Speed Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order_c__c</fullName>
        <externalDeveloperName>Sort_Order__c</externalDeveloperName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <label>Carrier Speed</label>
    <pluralLabel>Carrier Speeds</pluralLabel>
</CustomObject>